; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kernel_uuid_match.c___swap_mach_header.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kernel_uuid_match.c___swap_mach_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mach_header = type { i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mach_header*)* @__swap_mach_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__swap_mach_header(%struct.mach_header* %0) #0 {
  %2 = alloca %struct.mach_header*, align 8
  store %struct.mach_header* %0, %struct.mach_header** %2, align 8
  %3 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %4 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %3, i32 0, i32 6
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @SWAP32(i32 %5)
  %7 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %8 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %7, i32 0, i32 5
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @SWAP32(i32 %9)
  %11 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %12 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %11, i32 0, i32 4
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @SWAP32(i32 %13)
  %15 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %16 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @SWAP32(i32 %17)
  %19 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %20 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @SWAP32(i32 %21)
  %23 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %24 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @SWAP32(i32 %25)
  %27 = load %struct.mach_header*, %struct.mach_header** %2, align 8
  %28 = getelementptr inbounds %struct.mach_header, %struct.mach_header* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @SWAP32(i32 %29)
  ret void
}

declare dso_local i32 @SWAP32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
